Fix some icon clipping and alignment
Issue #172

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,6 +29,15 @@ img {
     vertical-align: middle;
 }
 
+svg:not(:root) {
+    overflow: visible;
+}
+
+.icon-container {
+    flex-shrink: 0;
+    display: contents;
+}
+
 .split-horizontal {
     display: flex;
     flex-direction: row;
